# RubiksCubeSolver

./: CMakeLists.txt  GenericRubiksCube.cpp  GenericRubiksCube.h  RubiksCube.cpp  RubiksCube.h  main.cpp
model/: RubiksCube.h  RubiksCube1DArrayRepresentation.cpp  RubiksCube3DArrayRepresentation.cpp
patternDatabase/: NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h
solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
